update contracts and add contractors
